# hmdf

./: .travis.yml  CMakeLists.txt  Hmdf.pro  README.md  codecov.yml  hmdf.pro
include/: cdate.h  date.h  hmdf.h  hmdf_global.h  logging.h  nefisseriesmetadata.h  station.h  timepoint.h  types.h
libhmdf/: libhmdf.pro
libhmdf/include/: constants.h  date.h  hmdf.h  hmdf_global.h  logging.h  nefisseriesmetadata.h  projection.h  station.h  timepoint.h
libhmdf/src/: constants.cpp  date.cpp  hmdf.cpp  logging.cpp  nefisseriesmetadata.cpp  projection.cpp  station.cpp  timepoint.cpp
python/: hmdf.i
src/: cdate.cpp  cdate.h  date.cpp  hmdf.cpp  hmdf.h  logging.cpp  nefisseriesmetadata.cpp  station.cpp  station.h  timepoint.cpp  timepoint.h
testing/cxx/: cxx_projection.cpp  cxx_readAdcirc.cpp  cxx_readAdcircNetcdf.cpp  cxx_readGenericNetcdf.cpp  cxx_readImeds.cpp  cxx_readNefis.cpp
testing/python/: adcirc_read.py
testing/test_files/: Observations_NOAA_8761305.imeds  fort_dup.61  trih-test.def
